# red-team

./: README.md  Windows-Post-Exploitation.md  bvz-batchvirus.bat  downloader.txt  elevateMe.bat  ps.ps1
Command_Control,_Exfiltration_&_Persistance/Empire/Empire/: README.md  pyproject.toml
Command_Control,_Exfiltration_&_Persistance/Empire/Empire/empire/client/src/: EmpireCliState.py  ShortcutHandler.py  bindings.py
Command_Control,_Exfiltration_&_Persistance/Empire/Empire/empire/client/src/menus/: AdminMenu.py  (+7 more)
Command_Control,_Exfiltration_&_Persistance/Empire/Empire/empire/server/: config.yaml  server.py
Command_Control,_Exfiltration_&_Persistance/Empire/Empire/empire/server/common/: agents.py  bypasses.py  credentials.py  helpers.py  hooks.py  hooks_internal.py  module_models.py  modules.py  packets.py  plugins.py  users.py
Command_Control,_Exfiltration_&_Persistance/Empire/Empire/empire/server/csharp/: Program.cs
Command_Control,_Exfiltration_&_Persistance/Empire/Empire/empire/server/database/: defaults.py
Command_Control,_Exfiltration_&_Persistance/Empire/Empire/empire/server/listeners/: http_com.py  http_mapi.py  onedrive.py  template.py
Command_Control,_Exfiltration_&_Persistance/Empire/Empire/empire/server/plugins/: PLUGINS.md  csharpserver.py  websockify.py
Command_Control,_Exfiltration_&_Persistance/Empire/Empire/empire/server/stagers/: CSharpPy.yaml  Sharpire.yaml
Command_Control,_Exfiltration_&_Persistance/Empire/Empire/empire/server/utils/: module_util.py
Command_Control,_Exfiltration_&_Persistance/Empire/Empire/setup/: cert.sh
(+5197 files in other folders)
